--- a/src/components/OldPostWarning.astro
+++ b/src/components/OldPostWarning.astro
@@ -6,10 +6,11 @@ const diffTime = Math.abs(today - postDate);
 const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 const years = Math.floor(diffDays / 365);
 ---
-
-{years >= 2 && (
-    <div class="p-4 my-4 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700">
-        <p class="font-bold">この記事は{years}年以上前に公開されたものです。</p>
-        <p>情報が古くなっている可能性があります。</p>
-    </div>
-)}
+<div class="not-prose">
+    {years >= 2 && (
+        <div class="px-4 py-3 my-1 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700">
+            <p class="font-bold">この記事は{years}年以上前に公開されたものです。</p>
+            <p>情報が古くなっている可能性があります。</p>
+        </div>
+    )}
+</div>
