--- a/src/components/RecentPosts.astro
+++ b/src/components/RecentPosts.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 
-const allPosts = await getCollection('blog');
+const allPosts = (await getCollection('blog')).filter(p => p.slug.startsWith('ja/'));
 ---
 
 <div class="mt-8">
@@ -10,7 +10,7 @@ const allPosts = await getCollection('blog');
         {
             allPosts.slice(0, 5).map((post) => (
                 <li class="mb-2">
-                    <a href={`/articles/${post.id}`} class="text-gray-700 no-underline hover:text-[#D4873B] transition-colors relative group">
+                    <a href={`/articles/${post.slug.replace(/^ja\//, '')}`} class="text-gray-700 no-underline hover:text-[#D4873B] transition-colors relative group">
                         <span>{post.data.title}</span>
                     </a>
                     
