--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -9,7 +9,7 @@ import ArticleCard from "../../components/ArticleCard.astro";
 import Pagination from '../../components/Pagination.astro';
 
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
-  const allPosts = await getCollection('blog');
+  const allPosts = (await getCollection('blog')).filter(p => p.slug.startsWith('ja/'));
   allPosts.sort((a, b) => new Date(b.data.createdAt).getTime() - new Date(a.data.createdAt).getTime());
   return paginate(allPosts, { pageSize: 5 });
 };
@@ -25,7 +25,7 @@ const { page } = Astro.props as { page: Page<CollectionEntry<'blog'>> };
 	
     <ul>
         {page.data.map((post) => <li class="mb-5">
-            <ArticleCard url={`/articles/${post.id}`} title={post.data.title} pubDate={post.data.createdAt} description={post.data.description} tags={post.data.tags} />
+            <ArticleCard url={`/articles/${post.slug.replace(/^ja\//, '')}`} title={post.data.title} pubDate={post.data.createdAt} description={post.data.description} tags={post.data.tags} />
         </li>)}
     </ul>
     <Pagination page={page} />
