--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -7,7 +7,7 @@ import BlogProfile from '../../components/BlogProfile.astro';
 import RecentPosts from '../../components/RecentPosts.astro';
 
 export async function getStaticPaths() {
-  const allPosts = await getCollection('blog');
+  const allPosts = (await getCollection('blog')).filter(p => p.slug.startsWith('ja/'));
 
   const uniqueTags = new Set<string>();
   allPosts.forEach((post) => {
@@ -38,7 +38,7 @@ posts.sort((a, b) => b.data.createdAt.valueOf() - a.data.createdAt.valueOf());
 
     <ul>
         {posts.map((post) => <li class="mb-5">
-            <ArticleCard url={`/articles/${post.id}`} title={post.data.title} pubDate={post.data.createdAt} description={post.data.description} tags={post.data.tags} />
+            <ArticleCard url={`/articles/${post.slug.replace(/^ja\//, '')}`} title={post.data.title} pubDate={post.data.createdAt} description={post.data.description} tags={post.data.tags} />
         </li>)}
     </ul>
     <div slot="sidebar">
