--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from 'astro:content';
 import BlogLayout from '../../layouts/BlogLayout.astro';
 
-const allPosts = await getCollection('blog');
+const allPosts = (await getCollection('blog')).filter(p => p.slug.startsWith('ja/'));
 const uniqueTags = new Set<string>();
 allPosts.forEach((post) => {
   post.data.tags?.forEach((tag) => {
