feat: Advent Calender関連をfrontmatterで設定するように

--- a/src/shortcodes/Advantar.astro
+++ b/src/shortcodes/Advantar.astro
@@ -2,4 +2,10 @@
 const { id } = Astro.props;
 ---
 
-<iframe src={`https://adventar.org/calendars/${id}/embed`} width="620" height="362" frameborder="0" loading="lazy"></iframe>
+<iframe
+    src={`https://adventar.org/calendars/${id}/embed`}
+    width="620"
+    height="362"
+    frameborder="0"
+    loading="lazy"
+    class="w-full"></iframe>
