--- a/src/layouts/BlogArticle.astro
+++ b/src/layouts/BlogArticle.astro
@@ -8,31 +8,9 @@ import OldPostWarning from "../components/OldPostWarning.astro";
 import ShareButtons from "../components/ShareButtons.astro"; // Import the new component
 import { RotateCw } from "lucide-react";
 import { z } from "astro:content";
+import { blogSchema, blogLicenses } from "../content/config.ts";
 
-const frontmatterLicenseType = z
-        .enum([
-            "CC0",
-            "CC BY",
-            "CC BY-SA",
-            "CC BY-NC",
-            "CC BY-ND",
-            "CC BY-NC-ND",
-            "All Rights Reserved",
-        ])
-        .optional()
-        .default("All Rights Reserved")
-
-const frontmatterType = z.object({
-    createdAt: z.date(),
-    updatedAt: z.date().optional(),
-    iconUrl: z.string().url().optional(),
-    title: z.string(),
-    description: z.string(),
-    thumbnail: z.string().optional(),
-    tags: z.array(z.string()).default([]),
-    license: frontmatterLicenseType,
-    noAi: z.boolean().default(true)
-});
+import AdventCalander from "../components/blog/AdventCalander.astro";
 
 const convertLicenseMap = {
 	"CC0": "CC0 1.0 Universal",
@@ -53,7 +31,7 @@ const convertLicenseMapUrl = {
 }
 
 interface Props {
-    frontmatter: z.infer<typeof frontmatterType>;
+    frontmatter: z.infer<typeof blogSchema>;
     headings: MarkdownHeading[];
     translationUrl?: string;
     translationLang?: 'en' | 'ja';
@@ -63,7 +41,7 @@ interface Props {
 const { frontmatter, headings, translationUrl, translationLang, lang } = Astro.props;
 const canonicalUrl = Astro.url.href;
 
-const getLicenseLink = (license: z.infer<typeof frontmatterLicenseType>) => {
+const getLicenseLink = (license: z.infer<typeof blogLicenses>) => {
     if (license === "All Rights Reserved") {
         return null;
     }
@@ -114,7 +92,7 @@ const licenseLink = getLicenseLink(frontmatter.license);
                 {
                     frontmatter.tags &&
                         frontmatter.tags.map((tag: string) => (
-                            <a href={`/tags/${tag}/`} class="no-underline">
+                            <a href={`/tags/${tag}/`} class="no-underline" translate="no">
                                 <span class="bg-[#E78B30] text-white px-2 py-1 rounded-full text-base">
                                     {tag}
                                 </span>
@@ -131,6 +109,11 @@ const licenseLink = getLicenseLink(frontmatter.license);
             <OldPostWarning
                 pubDate={frontmatter.updatedAt || frontmatter.createdAt}
             />
+            {
+              frontmatter.adventCalander && (
+                <AdventCalander id={frontmatter.adventCalander.id} name={frontmatter.adventCalander.name} day={frontmatter.adventCalander.day} lang={lang} />
+              )
+            }
             <slot />
             <ShareButtons text={frontmatter.title} url={canonicalUrl} />
             <div class="not-prose mt-8 text-sm text-gray-500 no-underline">
